--- a/Docs/TODAES/paper.tex
+++ b/Docs/TODAES/paper.tex
@@ -35,6 +35,7 @@
 % Package to generate and customize Algorithm as per ACM style
 \usepackage[ruled]{algorithm2e}
 \renewcommand{\algorithmcfname}{ALGORITHM}
+
 \SetAlFnt{\small}
 \SetAlCapFnt{\small}
 \SetAlCapNameFnt{\small}
@@ -61,7 +62,7 @@
 \begin{document}
 
 % Page heads
-\markboth{G. Zhou et al.}{A Multifrequency MAC Specially Designed for WSN Applications}
+\markboth{A. Trindade et al.}{Multi-Core Model Checking and Maximum Satisfiability Applied to HW/SW Partitioning}
 
 \title{Multi-Core Model Checking and Maximum Satisfiability Applied to Hardware-Software Partitioning}
 
